--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ ARQUIVO.jpg">
 
 <p id="missao"><em>Minha missão é: <strong>"vender motos de qualidade."</strong>.</em></p>
 
-<p>A loja de motos é um lugar especializado em oferecer uma variedade de motocicletas peças e acessórios para os entusiastas, de duas rodas.</p>
+<p>A loja de motos é um lugar especializado em oferecer uma variedade de motocicletas, peças e acessórios para os entusiastas de duas rodas. Com uma equipe qualificada e experiente, a loja busca atender às necessidades dos clientes, oferecendo opções de marcas e modelos, além de serviços de manutenção e reparo. Seja para quem busca aventura nas estradas ou para aqueles que utilizam a moto como meio de transporte, a loja de motos é o local ideal para encontrar tudo o que você precisa para viver a paixão sobre duas rodas.
 </div>
 
 <div class="BENEFICIOS">
