--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ ARQUIVO.jpg">
 <li class="itens">PROFISSIONAIS QUALIFICADOS</li>
 </ul>
 
-<img src="beneficios.jpg" class="imagembeneficios">
+<img src="banner-loja-de-motos-da-zona-norte-sp-2.jpg" class="imagembeneficios">
 </div>
 </body>
 </html>
